# fast-clean

./: docker-compose.yml  generate_locks.ps1  generate_locks.sh  pyproject.toml
api-gateway/: nginx.conf
gateway/: nginx.conf
microservices/scheduler/: Dockerfile  pyproject.toml
microservices/scheduler/entrypoints/: celery_beat.py
microservices/scheduler/infrastructure/: config.py
microservices/scheduler/infrastructure/di/: providers.py
microservices/settings/: Dockerfile  pyproject.toml
microservices/settings/application/: commands.py  dtos.py  queries.py
microservices/settings/domain/: entities.py  exceptions.py  ports.py  value_objects.py
microservices/settings/entrypoints/: web_server.py
microservices/settings/infrastructure/: config.py
microservices/settings/infrastructure/di/: providers.py
microservices/settings/infrastructure/persistence/: orm.py  repositories.py
microservices/settings/presentation/rest/: schemas.py  settings_controllers.py  utils.py
microservices/shared/domain/: ports.py  repositories.py
microservices/shared/infrastructure/: config.py
microservices/users/: Dockerfile  pyproject.toml
microservices/users/application/: auth_service.py  commands.py  dtos.py  interfaces.py  queries.py  services.py
microservices/users/bootstrap/: web_server.py
microservices/users/domain/: entities.py  exceptions.py  ports.py  repositories.py  validators.py
microservices/users/entrypoints/: web_server.py
microservices/users/infrastructure/: config.py
microservices/users/infrastructure/di/: providers.py
microservices/users/infrastructure/persistence/: orm.py  repositories.py
microservices/users/presentation/rest/: auth_controllers.py  controllers.py  dependencies.py  schemas.py  users_controllers.py
services/identity/: Dockerfile
services/shared/domain/: entities.py  (+3 more)
services/users/: Dockerfile  pyproject.toml
(+50 files in other folders)
