[project]
name = "devwatch-monorepo"
version = "0.1.0"
description = "DevWatch Productivity Platform Monorepo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dishka>=1.5.0",
    "fastapi>=0.115.12",
    "passlib[argon2]>=1.7.4",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "ruff>=0.11.2",
    "sentry-sdk>=2.24.1",
    "sqlalchemy[asyncio]>=2.0.39",
    "uvicorn[standard]>=0.34.0",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
]

