[project]
name = "devwatch-settings-service"
version = "0.1.0"
description = "DevWatch Settings Microservice"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "sqlalchemy[asyncio]>=2.0.39",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
    "dishka>=1.5.0",
    "passlib[argon2]>=1.7.4",
    "sentry-sdk>=2.24.1",
]